--- a/Healthcare020.WinUI/Healthcare020.WinUI.csproj
+++ b/Healthcare020.WinUI/Healthcare020.WinUI.csproj
@@ -243,6 +243,12 @@
     <Compile Include="Forms\DisplayDataForm.Designer.cs">
       <DependentUpon>DisplayDataForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\KorisnickiNalog\frmUserProfile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\KorisnickiNalog\frmUserProfile.Designer.cs">
+      <DependentUpon>frmUserProfile.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\StatisticChartForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -250,6 +256,9 @@
       <DependentUpon>StatisticChartForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\CustomElements\Button_WOC.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Helpers\CustomElements\CircularPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Helpers\CustomElements\NoDataPanel.cs">
@@ -306,6 +315,7 @@
     </Compile>
     <Compile Include="Helpers\DynamicTypesExntesions.cs" />
     <Compile Include="Helpers\FormExtensions.cs" />
+    <Compile Include="Helpers\StringExtensions.cs" />
     <Compile Include="Helpers\StyleExtensions.cs" />
     <Compile Include="Forms\KorisnickiNalog\frmLogin.cs">
       <SubType>Form</SubType>
@@ -321,6 +331,7 @@
     </Compile>
     <Compile Include="Helpers\Validation.cs" />
     <Compile Include="Models\APIServiceResult.cs" />
+    <Compile Include="Models\ComboBoxItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\APIService.cs" />
@@ -389,6 +400,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DisplayDataForm.resx">
       <DependentUpon>DisplayDataForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\KorisnickiNalog\frmUserProfile.resx">
+      <DependentUpon>frmUserProfile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\StatisticChartForm.resx">
       <DependentUpon>StatisticChartForm.cs</DependentUpon>
