Navigation bar now is on the main form. An improved way for closing the user dropdown menu on every click on the form.

--- a/Healthcare020.WinUI/Healthcare020.WinUI.csproj
+++ b/Healthcare020.WinUI/Healthcare020.WinUI.csproj
@@ -261,6 +261,7 @@
     <Compile Include="Forms\RadnikDashboard\frmMainDashboard.Designer.cs">
       <DependentUpon>frmMainDashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\ControlExtensions.cs" />
     <Compile Include="Helpers\CustomElements\Button_WOC.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -339,6 +340,7 @@
     <Compile Include="Models\APIServiceResult.cs" />
     <Compile Include="Models\ComboBoxItem.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\APIService.cs" />
     <Compile Include="Forms\AdminDashboard\frmStartMenuAdmin.cs">
