--- a/Healthcare020.WinUI/Healthcare020.WinUI.csproj
+++ b/Healthcare020.WinUI/Healthcare020.WinUI.csproj
@@ -304,6 +304,12 @@
     <Compile Include="Forms\RadnikDashboard\DoktorDashboard\frmNewUputnica.Designer.cs">
       <DependentUpon>frmNewUputnica.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\RadnikDashboard\DoktorDashboard\frmPregledOverview.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RadnikDashboard\DoktorDashboard\frmPregledOverview.Designer.cs">
+      <DependentUpon>frmPregledOverview.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\RadnikDashboard\DoktorDashboard\frmPregledZakazivanje.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -503,6 +509,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\RadnikDashboard\DoktorDashboard\frmNewUputnica.resx">
       <DependentUpon>frmNewUputnica.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\RadnikDashboard\DoktorDashboard\frmPregledOverview.resx">
+      <DependentUpon>frmPregledOverview.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\RadnikDashboard\DoktorDashboard\frmPregledZakazivanje.resx">
       <DependentUpon>frmPregledZakazivanje.cs</DependentUpon>
