--- a/Healthcare020.WinUI/Healthcare020.WinUI.csproj
+++ b/Healthcare020.WinUI/Healthcare020.WinUI.csproj
@@ -328,6 +328,24 @@
     <Compile Include="Forms\RadnikDashboard\DoktorDashboard\frmZahtevZaPregled.Designer.cs">
       <DependentUpon>frmZahtevZaPregled.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\RadnikDashboard\RadnikPrijem\frmRadnikPrijemDataDisplay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RadnikDashboard\RadnikPrijem\frmRadnikPrijemDataDisplay.Designer.cs">
+      <DependentUpon>frmRadnikPrijemDataDisplay.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\RadnikDashboard\RadnikPrijem\frmRadnikPrijemMainDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RadnikDashboard\RadnikPrijem\frmRadnikPrijemMainDashboard.Designer.cs">
+      <DependentUpon>frmRadnikPrijemMainDashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\RadnikDashboard\RadnikPrijem\frmRadnikPrijemPosete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RadnikDashboard\RadnikPrijem\frmRadnikPrijemPosete.Designer.cs">
+      <DependentUpon>frmRadnikPrijemPosete.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\ControlExtensions.cs" />
     <Compile Include="Helpers\CustomElements\Button_WOC.cs">
       <SubType>Component</SubType>
@@ -521,6 +539,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\RadnikDashboard\DoktorDashboard\frmZahtevZaPregled.resx">
       <DependentUpon>frmZahtevZaPregled.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\RadnikDashboard\RadnikPrijem\frmRadnikPrijemDataDisplay.resx">
+      <DependentUpon>frmRadnikPrijemDataDisplay.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\RadnikDashboard\RadnikPrijem\frmRadnikPrijemMainDashboard.resx">
+      <DependentUpon>frmRadnikPrijemMainDashboard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Helpers\CustomElements\NoDataPanel.resx">
       <DependentUpon>NoDataPanel.cs</DependentUpon>
