--- a/Healthcare020.WinUI/App.config
+++ b/Healthcare020.WinUI/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="Healthcare020.WinUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Healthcare020.WinUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -44,4 +47,11 @@
       </setting>
     </Healthcare020.WinUI.Properties.Settings>
   </userSettings>
+  <applicationSettings>
+    <Healthcare020.WinUI.Properties.Settings>
+      <setting name="RegistryKey" serializeAs="String">
+        <value>Software\\Healthcare020</value>
+      </setting>
+    </Healthcare020.WinUI.Properties.Settings>
+  </applicationSettings>
 </configuration>
