Implemented logging of exceptions (errors) in APIService (Desktop) with NLog. Fixed some parts of the desktop application and fixed bugs.

--- a/Healthcare020.WinUI/App.config
+++ b/Healthcare020.WinUI/App.config
@@ -4,7 +4,7 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="Healthcare020.WinUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="Healthcare020.WinUI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -51,6 +51,9 @@
     <Healthcare020.WinUI.Properties.Settings>
       <setting name="RegistryKey" serializeAs="String">
         <value>Software\\Healthcare020</value>
+      </setting>
+      <setting name="Healthcare020_Logger" serializeAs="String">
+        <value>Healthcare020_LoggerRule</value>
       </setting>
     </Healthcare020.WinUI.Properties.Settings>
   </applicationSettings>
