--- a/Healthcare020.WinUI/packages.config
+++ b/Healthcare020.WinUI/packages.config
@@ -20,6 +20,9 @@
   <package id="Microsoft.Owin.Security.Jwt" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="NLog" version="4.7.2" targetFramework="net472" />
+  <package id="NLog.Config" version="4.7.2" targetFramework="net472" />
+  <package id="NLog.Schema" version="4.7.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
